--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,94 @@ path.current-floor {
     font-size: 124px;
     margin-top: 10px;
 }
+
+.modal {
+    position: fixed; /* Фиксированная позиция, значит что мы приклеиваем какой-то контент поверх всего сайта */
+    left: 0; /* Приклеиваем к левому краю */
+    top: 0; /* Приклеиваем к верху */
+    width: 100%; /* Говорим о том, что перекрываем весь сайт */
+    height: 100%; /* Говорим о том, что это окно занимает всю страницу целиком */
+    background-color: rgba(0, 0, 0, 0.8); /* Полупрозрачный фоновый чёрный цвет */
+    display: flex; /* Родительский элемент гибкий */
+    justify-content: center;
+    align-items: center;
+    opacity: 0; /* делаем его прознычным (окно) */
+    transform: scale(0); /* делаем невидным окно */
+    transition: opacity 0.2s;
+}
+
+.is-open {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.modal-dialog {
+    position: relative; /* ставим кнопку на край окна */
+    max-width: 1000px;
+    min-height: 565px;
+    background-color: white;
+    flex-grow: 1;
+    display: flex; /* Показываем нашу картинку в окне */
+}
+
+.modal-image {
+    background-color: #ebebeb;
+    width: 60%; /* Задаём ширину нашей картинки в модальном окне */
+    text-align: center; /* весь текст и картинка по центру */
+}
+
+.modal-title {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 24px;
+    margin-top: 0;
+    margin-bottom: 25px;
+}
+
+.modal-info {
+    width: 40%;
+    padding: 50px 46px;
+}
+
+.flat-list {
+    padding: 0;
+    list-style: none;
+    margin-top: 55px;
+}
+
+.flat-item {
+    margin-bottom: 10px;
+}
+
+.flat-link {
+    font-size: 16px;
+    line-height: 19px;
+    color: #635854;
+    text-decoration: none;
+}
+
+.flat-link:hover {
+    color: #3596F5;
+    text-decoration: underline;
+}
+
+.modal-alert {
+    font-style: italic;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #635854;
+    margin-top: 56px;
+}
+
+.modal-close-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    border: none;
+    background-color: white;
+    right: 27px;
+    top: 38px;
+}
